--- a/index.html
+++ b/index.html
@@ -1,14 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Personal Homepage</title>
+    <title>Emmanuel Okyere | WDD 130</title>
 </head>
-<body>
-    <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace it with your own personal details.</p>
 
-    <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
+<body>
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="wwr/">Rafting Website</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Emmanuel Okyere | WDD 130</h1>
+        <img src="images/EMMANUEL.jpg" alt="My picture">
+        <p>Hello, my name is Emmanuel Okyere and I am from Accra, Ghana. I enjoy hanging out with
+            friends. I am currently studying Web Design and Development at BYU. I am excited to
+            learn more about web development and design. I am looking forward to creating my own
+            website and learning more about the industry. I am excited to see what the future holds
+            for me.</p>
+
+        <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
+    </main>
+    <footer>
+        <p> &copy; 2026 🏊‍♀️ Emmanuel Okyere 🏊‍♀️ Accra, Ghana</p>
+    </footer>
+
 </body>
+
 </html>
