updated emmanuel.jpg to profile

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
     <main>
         <h1>Emmanuel Okyere | WDD 130</h1>
-        <img src="images/emmanuel.jpg" alt="My picture">
+        <img src="images/profile.jpg" alt="My picture">
         <p>Hello, my name is Emmanuel Okyere and I am from Accra, Ghana. I enjoy hanging out with
             friends. I am currently studying Web Design and Development at BYU. I am excited to
             learn more about web development and design. I am looking forward to creating my own
