Basic HTML Structure

--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -1,11 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>placeholder</title>
+    <meta name="description" content="A basic HTML structure example using semantic HTML elements">
+    <meta name="author" content="Emmanuel Okyere">
+    <title>
+        Basic HTML Structure</title>
 </head>
+
 <body>
-    
+    <header>
+        <img src="images/basic-logo.png" alt="basic-logo" width="128px" height="128px">
+    </header>
+    <nav>
+        <ul>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Contact Us</a></li>
+        </ul>
+    </nav>
+    <main>
+        <h1>Basic HTML Structure</h1>
+        <section>
+            <h2>Heading</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi dolores eveniet
+                explicabo maxime rem, ea perferendis sunt id officia cum tenetur ipsum culpa
+                similique assumenda dolorum obcaecati deserunt ab totam!</p>
+        </section>
+        <section>
+            <h2>Heading</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla quisquam iste animi?
+                Asperiores totam voluptatem in modi reiciendis magnam, pariatur iste, debitis beatae
+                expedita impedit fugiat exercitationem, id quo nemo.</p>
+        </section>
+    </main>
+    <aside>
+        <img
+          src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/belem-brazil/800x500/belem_brazil_temple_celestial.jpg"
+          alt="Temple" width="200" height="200">
+    </aside>
+    <footer>
+        <p>🏊‍♀️Emmanuel Okyere🏊‍♀️</p>
+    </footer>
 </body>
+
 </html>
