Home Page Enhancement

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Rafting Website">
+    <meta name="author" content="Emmanuel Okyere">
     <title>Emmanuel Okyere | WDD 130</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
@@ -26,10 +28,16 @@
 
         <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
     </main>
+    <aside>
+        <h2>Accra, Ghana</h2>
+        <img
+          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQktkCPk2tOH6sRxqtIhwmIWanqoKXLXYKzIA&s"
+          alt="Accra Ghana">
+        <p>Accra is the capital city of Ghana located within the southern part of the Ghana map</p>
+    </aside>
     <footer>
         <p> &copy; 2026 🏊‍♀️ Emmanuel Okyere 🏊‍♀️ Accra, Ghana</p>
     </footer>
-
 </body>
 
 </html>
