--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Rafting Website">
+    <meta name="description" content="This Page talks about myself, who I am and where I come from">
     <meta name="author" content="Emmanuel Okyere">
     <title>Emmanuel Okyere | WDD 130</title>
     <link rel="stylesheet" href="styles/styles.css">
