--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
     </main>
     <aside>
         <h2>Accra, Ghana</h2>
-        <img
-          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQktkCPk2tOH6sRxqtIhwmIWanqoKXLXYKzIA&s"
-          alt="Accra Ghana">
+        <img src="images/accra.jpg" alt="Accra Ghana">
         <p>Accra is the capital city of Ghana located within the southern part of the Ghana map</p>
     </aside>
     <footer>
