--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="This Page talks about myself, who I am and where I come from">
+    <meta name="description" content="This Page talks about myself, who I am and where I come from. I enjoy hanging out with friends. I am currently studying Web Design and Development at BYU. I am excited to learn more about web development and design. I am looking forward to creating my own website and learning more about the industry. I am excited to see what the future holds
+            for me.">
     <meta name="author" content="Emmanuel Okyere">
     <title>Emmanuel Okyere | WDD 130</title>
     <link rel="stylesheet" href="styles/styles.css">
