--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="This Page talks about myself, who I am and where I come from. I enjoy hanging out with friends. I am currently studying Web Design and Development at BYU. I am excited to learn more about web development and design. I am looking forward to creating my own website and learning more about the industry. I am excited to see what the future holds
-            for me.">
+    <meta name="description"
+      content="This Page talks about myself, who I am and where I come from. I enjoy hanging out with friends. I am currently studying Web Design and Development at BYU. I am excited to learn more about web development and design. I am looking forward to creating my own website and learning more about the industry. I am excited to see what the future holds
+    for me. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum">
     <meta name="author" content="Emmanuel Okyere">
     <title>Emmanuel Okyere | WDD 130</title>
     <link rel="stylesheet" href="styles/styles.css">
