--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="White Water Rafting Site">
+    <meta name="description"
+      content="White Water Rafting Site. Our team of experienced guides dedicated to ensuring your safety ">
     <meta name="author" content="Emmanuel Okyere">
     <title>Document</title>
     <link rel="stylesheet" href="styles/rafting.css">
@@ -12,22 +13,22 @@
 
 <body>
     <header>
-        <img src="images/wwr_logo.png" alt="page logo" width="100px">
+        <img src="images/wwr_logo.png" alt="page logo">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="trips.html">Trips</a></li>
-                <li><a href="contacts.html">Contact Us</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <div class="hero">
-            <img src="images/hero_image.jpg">
+            <img src="images/hero_image.jpg" alt="hero image">
             <h1>Emperor Rafting Company</h1>
             <article>
-                <img src="images/happy_clients.png" alt="happy clients" width="200px">
+                <img src="images/happy_clients.jpg" alt="happy clients">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis quod
                     voluptates
                     iste, assumenda facere minima soluta atque ipsum. Iste aut quas fugiat libero
@@ -47,21 +48,21 @@
     </main>
     <footer>
         <p>&copy; 2026 🏊‍♀️ Emmanuel Okyere 🏊‍♀️ Accra, Ghana</p>
-        <nav class="socials">
+        <nav class="socialmedia">
             <a href="https://facebook.com">
-                <img src="images/facebook.svg" alt="facebook icon" width="30px">
+                <img src="images/facebook.svg" alt="facebook icon">
             </a>
             <a href="https://linkedIn.com">
-                <img src="images/linkedIn.svg" alt="LinkedIn icon" width="30px">
+                <img src="images/linkedin.svg" alt="LinkedIn icon">
             </a>
             <a href="https://instagram.com">
-                <img src="images/instagram.svg" alt="Instagram icon" width="30px">
+                <img src="images/instagram.svg" alt="Instagram icon">
             </a>
             <a href="https://twitter.com">
-                <img src="images/twitter.svg" alt="X icon" width="30px">
+                <img src="images/twitter.svg" alt="X icon">
             </a>
             <a href="https://youtube.com">
-                <img src="images/youtube.svg" alt="youtube icon" width="30px">
+                <img src="images/youtube.svg" alt="youtube icon">
             </a>
         </nav>
     </footer>
