--- a/wwr/about.html
+++ b/wwr/about.html
@@ -7,7 +7,7 @@
     <meta name="description"
       content="White Water Rafting Site. Our team of experienced guides dedicated to ensuring your safety ">
     <meta name="author" content="Emmanuel Okyere">
-    <title>Document</title>
+    <title>About Us | Emperor Rafting Company</title>
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
@@ -52,17 +52,11 @@
             <a href="https://facebook.com">
                 <img src="images/facebook.svg" alt="facebook icon">
             </a>
-            <a href="https://linkedIn.com">
-                <img src="images/linkedin.svg" alt="LinkedIn icon">
-            </a>
             <a href="https://instagram.com">
                 <img src="images/instagram.svg" alt="Instagram icon">
             </a>
             <a href="https://twitter.com">
                 <img src="images/twitter.svg" alt="X icon">
-            </a>
-            <a href="https://youtube.com">
-                <img src="images/youtube.svg" alt="youtube icon">
             </a>
         </nav>
     </footer>
