week04 code along

--- a/index.html
+++ b/index.html
@@ -14,38 +14,50 @@
 <body>
     <header>
         <nav>
-            <a href="#">Home</a>
-            <a href="wwr/">Rafting Website</a>
-            <a href="https://www.linkedin.com/feed/">LinkedIn</a>
-            <a href="https://web.facebook.com/?_rdc=1&_rdr#">Facebook</a>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="wwr/">Rafting Website</a></li>
+                <li><a href="https://www.linkedin.com/feed/">LinkedIn</a></li>
+                <li><a href="https://web.facebook.com/?_rdc=1&_rdr#">Facebook</a></li>
+            </ul>
+
         </nav>
     </header>
-    <main>
-        <h1>Emmanuel Okyere | WDD 130</h1>
-        <img src="images/profile.jpg" alt="My picture">
-        <p>Hello, my name is Emmanuel Okyere and I am from Accra, Ghana. I enjoy hanging out with
-            friends. I am currently studying Web Design and Development at BYU. I am excited to
-            learn more about web development and design. I am looking forward to creating my own
-            website and learning more about the industry. I am excited to see what the future holds
-            for me. I hope to be a frontend web developer working for a company in USA. Lorem ipsum
-            dolor sit amet consectetur adipisicing elit. Voluptatibus laudantium, enim quia quis
-            quos impedit at omnis minima iusto quaerat tempora consequatur fugiat quas quasi! Cumque
-            cum iure obcaecati fugiat!</p>
+    <div class="grid">
+        <main>
+            <h1>Emmanuel Okyere | WDD 130</h1>
+            <img src="images/profile.jpg" alt="My picture">
+            <p>Hello, my name is Emmanuel Okyere and I am from Accra, Ghana. I enjoy hanging out
+                with
+                friends. I am currently studying Web Design and Development at BYU. I am excited to
+                learn more about web development and design. I am looking forward to creating my own
+                website and learning more about the industry. I am excited to see what the future
+                holds
+                for me. I hope to be a frontend web developer working for a company in USA. Lorem
+                ipsum
+                dolor sit amet consectetur adipisicing elit. Voluptatibus laudantium, enim quia quis
+                quos impedit at omnis minima iusto quaerat tempora consequatur fugiat quas quasi!
+                Cumque
+                cum iure obcaecati fugiat!</p>
 
-        <ul class="box">
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/accra-ghana-temple?lang=eng"
-                  alt="Accra Temple">Accra Temple</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/aba-nigeria-temple?lang=eng"
-                  alt="Aba nigeria Temple">Nigeria Temple</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/antananarivo-madagascar-temple?lang=eng"
-                  alt="Madagascar Temple">Madagascar Temple</a></li>
-        </ul>
-    </main>
-    <aside class="box">
-        <h2>Accra, Ghana</h2>
-        <img src="images/accra.jpg" alt="Accra Ghana">
-        <p>Accra is the capital city of Ghana located within the southern part of the Ghana map</p>
-    </aside>
+            <ul class="box">
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/accra-ghana-temple?lang=eng"
+                      alt="Accra Temple">Accra Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/aba-nigeria-temple?lang=eng"
+                      alt="Aba nigeria Temple">Nigeria Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/antananarivo-madagascar-temple?lang=eng"
+                      alt="Madagascar Temple">Madagascar Temple</a></li>
+            </ul>
+        </main>
+    </div>
+    <div class="grid">
+        <aside class="box">
+            <h2>Accra, Ghana</h2>
+            <img src="images/accra.jpg" alt="Accra Ghana">
+            <p>Accra is the capital city of Ghana located within the southern part of the Ghana map
+            </p>
+        </aside>
+    </div>
     <footer>
         <p> &copy; 2026 🏊‍♀️ Emmanuel Okyere 🏊‍♀️ Accra, Ghana</p>
     </footer>
