--- a/wwr/about.html
+++ b/wwr/about.html
@@ -13,37 +13,67 @@
 
 <body>
     <header>
-        <img src="images/wwr_logo.png" alt="page logo">
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="trips.html">Trips</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
-            </ul>
-        </nav>
+        <div class="grid">
+            <img src="images/wwr_logo.png" alt="page logo">
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="trips.html">Trips</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
+    </div>
     <main>
         <div class="hero">
             <img src="images/hero_image.jpg" alt="hero image">
-            <h1>Emperor Rafting Company</h1>
+            <h1>EMPEROR RAFTING TRAVEL</h1>
             <article>
                 <img src="images/happy_clients.jpg" alt="happy clients">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis quod
                     voluptates
-                    iste, assumenda facere minima soluta atque ipsum. Iste aut quas fugiat libero
-                    quod
-                    magni, sint facilis officia nam vitae?</p>
+                    iste, assumenda facere minima soluta atque ipsum. </p>
             </article>
         </div>
         <section>
             <h2>History</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque laboriosam
-                eligendi nostrum a quam veniam, mollitia hic est quisquam nemo voluptatem magni ut,
-                incidunt soluta in quis saepe ad at.</p>
+            <div class="history-grid">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque laboriosam
+                    eligendi nostrum a quam veniam, mollitia hic est quisquam nemo voluptatem magni
+                    ut, incidunt soluta in quis saepe ad at.
+                </p>
+                <img src="images/adventure6.jpg" alt="history">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus at impedit
+                    nulla necessitatibus nihil! Quis, possimus! Odio, dolores? Doloribus deserunt
+                    ipsum id sequi error et eius, at quis in nihil?</p>
+            </div>
         </section>
         <section>
             <h2>Adventure Awaits You!</h2>
+            <div class="adventure-grid">
+                <figure>
+                    <img src="images/adventure4.jpg" alt="safety first">
+                    <figcaption>Safety First</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/adventure3.jpg" alt="calm lake">
+                    <figcaption>Calm Lake</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/adventure2.jpg" alt="rafting">
+                    <figcaption>Getting Busy</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/adventure7.jpg" alt="victory">
+                    <figcaption>Victory!</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/adventure5.jpg" alt="task completed">
+                    <figcaption>Challenge Completed</figcaption>
+                </figure>
+            </div>
         </section>
     </main>
     <footer>
