--- a/wwr/about.html
+++ b/wwr/about.html
@@ -71,7 +71,7 @@
                 </figure>
                 <figure>
                     <img src="images/adventure5.jpg" alt="task completed">
-                    <figcaption>Challenge Completed</figcaption>
+                    <figcaption>Memories</figcaption>
                 </figure>
             </div>
         </section>
@@ -86,7 +86,7 @@
                 <img src="images/instagram.svg" alt="Instagram icon">
             </a>
             <a href="https://twitter.com">
-                <img src="images/twitter.svg" alt="X icon">
+                <img src="images/twitter.svg" alt="twitter icon">
             </a>
         </nav>
     </footer>
