--- a/wwr/about.html
+++ b/wwr/about.html
@@ -25,29 +25,33 @@
             </nav>
         </div>
     </header>
-    </div>
     <main>
         <div class="hero">
             <img src="images/hero_image.jpg" alt="hero image">
             <h1>EMPEROR RAFTING TRAVEL</h1>
             <article>
                 <img src="images/happy_clients.jpg" alt="happy clients">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis quod
-                    voluptates
-                    iste, assumenda facere minima soluta atque ipsum. </p>
+                <p>Welcome to Emperor Rafting Travel, your gateway to unforgettable white-water
+                    rafting experiences.
+                    Set against stunning natural landscapes, our rafting trips combine adrenaline,
+                    teamwork, and
+                    breathtaking scenery for an adventure you’ll never forget.</p>
             </article>
         </div>
         <section>
             <h2>History</h2>
             <div class="history-grid">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque laboriosam
-                    eligendi nostrum a quam veniam, mollitia hic est quisquam nemo voluptatem magni
-                    ut, incidunt soluta in quis saepe ad at.
+                <p>Safety is at the core of everything we do. Our certified guides are highly
+                    trained, our equipment is
+                    top-quality, and every trip begins with a full safety briefing to ensure you
+                    feel confident and on the water.
                 </p>
                 <img src="images/adventure6.jpg" alt="history">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus at impedit
-                    nulla necessitatibus nihil! Quis, possimus! Odio, dolores? Doloribus deserunt
-                    ipsum id sequi error et eius, at quis in nihil?</p>
+                <p>At Emperor Rafting Travel, rafting is more than just a ride, it’s an experience
+                    that challenges you,
+                    excites you, and leaves you wanting more. Grab a paddle, feel the rush, and let
+                    the river lead the
+                    way.</p>
             </div>
         </section>
         <section>
