--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="wwr/">Rafting Website</a></li>
+                <li><a href="wwr/about.html">Rafting Website</a></li>
                 <li><a href="https://www.linkedin.com/feed/">LinkedIn</a></li>
                 <li><a href="https://web.facebook.com/?_rdc=1&_rdr#">Facebook</a></li>
             </ul>
