--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="White Water Rafting Company Contact Page">
+    <meta name="description"
+      content="White Water Rafting Company Contact Page. Register and let's get started with the adventures">
     <meta name="author" content="Emmanuel Okyere">
     <title>Contact Us | Emperor Rafting Company</title>
     <link rel="stylesheet" href="styles/rafting.css">
@@ -40,7 +41,7 @@
             <div class="map">
                 <iframe
                   src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d63532.65048505935!2d-0.2656019285278388!3d5.597918454541474!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sgh!4v1770761735032!5m2!1sen!2sgh"
-                  width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                  width="300" height="300" allowfullscreen="" loading="lazy"
                   referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
@@ -54,15 +55,15 @@
                 <fieldset class="message-purpose">
                     <legend>Message Purpose</legend>
                     <label>
-                        <input type="radio" name="purpose" value="general" required>
+                        <input type="radio" name="purpose" id="general" value="general" required>
                         General Inquiry
                     </label>
                     <label>
-                        <input type="radio" name="purpose" value="reservation">
+                        <input type="radio" name="purpose" id="reservation" value="reservation">
                         Reservation Question
                     </label>
                     <label>
-                        <input type="radio" name="purpose" value="suggestion">
+                        <input type="radio" name="purpose" value="suggestion" id="suggestion">
                         Website Suggestion
                     </label>
                 </fieldset>
@@ -71,7 +72,7 @@
                 <textarea id="message" name="message" placeholder="Type here"></textarea>
 
                 <label class="checkbox">
-                    <input type="checkbox" name="subscribe">
+                    <input type="checkbox" name="subscribe" id="subscribe">
                     Please subscribe me to the monthly newsletter
                 </label>
 
